Fix bug: settings icon only showing in dark mode

--- a/src/components/Menu/menuButton.css
+++ b/src/components/Menu/menuButton.css
@@ -1,3 +1,6 @@
 #ionFabButton {
     --background: transparent !important;
 }
+#settingsIcon {
+    color: #222428 !important;
+}
